Hide brand logos until branding settings load

--- a/public/index.html
+++ b/public/index.html
@@ -5017,7 +5017,7 @@
     <div class="landing-shell">
       <div class="login-card">
         <div class="login-card-header">
-          <img id="loginBrandLogo" src="logo.png" alt="Organization logo" class="brand-logo">
+          <img id="loginBrandLogo" src="logo.png" alt="Organization logo" class="brand-logo" style="visibility: hidden;">
           <p class="login-kicker">Secure workforce access</p>
           <div>
             <h1 id="loginPortalName" class="login-title">Brillar HR Portal</h1>
@@ -5069,7 +5069,7 @@
     <header class="top-app-bar">
       <div class="top-bar-shell">
         <div class="brand-cluster">
-          <img id="appBrandLogo" src="https://static.wixstatic.com/media/34647d_4924e46631c3463abed06f9e3147eba3~mv2.png" alt="Organization logo">
+          <img id="appBrandLogo" src="https://static.wixstatic.com/media/34647d_4924e46631c3463abed06f9e3147eba3~mv2.png" alt="Organization logo" style="visibility: hidden;">
           <div class="brand-text">
             <span id="appPortalName" class="brand-title">Brillar HR Portal</span>
             <span class="brand-tagline">Modern, people-first HR experiences</span>
@@ -7466,7 +7466,7 @@
             </div>
 
             <div class="settings-form__fields settings-form__fields--full">
-              <img id="organizationLogoPreview" src="logo.png" alt="Organization logo preview" class="brand-logo" style="max-width: 180px; height: auto;">
+              <img id="organizationLogoPreview" src="logo.png" alt="Organization logo preview" class="brand-logo" style="max-width: 180px; height: auto; visibility: hidden;">
             </div>
 
             <button type="submit" class="md-button md-button--filled md-button--small settings-form__submit">
